# libro-opengl

./: .gitignore  Cargo.toml  build.rs
assets/shaders/: sierpinski.frag  sierpinski.vert  triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: main.rs  resources.rs  sierpinski.rs  triangle.rs
src/render_gl/: buffer.rs  color_buffer.rs  mod.rs  shader.rs  viewport.rs
