[package]
name = "sdlprueba"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
gl = { path = "lib/gl" }
render_gl_derive = { path = "render_gl_derive" }
anyhow = "1.0"
thiserror = "1.0"
vec-2-10-10-10 = "0.1"
half = "1.7"
nalgebra = "0.16"

[build-dependencies]
walkdir = "2.3"

[features]
gl_debug = ["gl/debug"]
